--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.2"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19",
+}
 }
