--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "handlebars-helper-repeat": "^2.0.0",
     "mysql2": "^2.3.3",
     "node-fetch": "^2.6.7",
     "sequelize": "^6.21.2"
