--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/seed.js"
+    "start": "node server.js"
   },
   "repository": {
-    "type": "module",
+    "type": "git",
     "url": "git+https://github.com/Jean424/Project_2.git"
   },
   "keywords": [],
   "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Jean424/Project_2/issues"
   },
@@ -29,7 +28,6 @@
     "handlebars": "^4.7.7",
     "handlebars-helper-repeat": "^2.0.0",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
     "node-fetch": "^2.6.7",
     "sequelize": "^6.21.2"
   }
