--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "project_2",
+  "name": "dnd-character-creater",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": "16.15"
-  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
